# nodi

./: .gitignore  Cargo.toml  README.md
crates/nodi-cli/: Cargo.toml
crates/nodi-cli/src/: file.rs  main.rs
example/: c.md
example/.nodi/: md.sqlite
migrations/: init.sql
src/: file.rs  main.rs
