[package]
name = "nodi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
md5-rs = "0.1.5"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"]  }
tokio = { version = "1.25.0", features = ["macros"] }
walkdir = "2.3.2"
